style.css
:root {
  --primary-color: #172b4d;
  --secondary-color: #3a4a42;
  --highlight-color: #36b37f;
  --neutral-color: #dfe1e6;
  --neutral-color-50: #c1c7d0;
  --secondary-color-50: #d0d9d4;
}

* {
  box-sizing: border-box;
  scroll-behavior: smooth;
}

body {
  margin: 0;
  padding: 0;
  color: var(--primary-color);
  font-family: "Inter", sans-serif;
}

a {
  text-decoration: none;
}

button {
  border: 0;
  outline: 0;
  cursor: pointer;
  background: transparent;
}

ul {
  padding-left: 0;
  list-style-type: none;
}

input,
textarea {
  border: 1px solid var(--neutral-color-50);
  border-radius: 4px;
  outline: none;
  width: 100%;
  height: 48px;
  padding-left: 16px;
  font-family: Inter, sans-serif;
}

input::placeholder,
textarea::placeholder {
  font-family: Inter, sans-serif;
  font-style: italic;
  font-size: 1rem;
  line-height: 1.5rem;
  color: var(--neutral-color-50);
}

input:focus,
textarea:focus {
  border-color: var(--highlight-color);
}

textarea::placeholder {
  font-style: normal;
}

.section-container {
  padding: 1.25rem;
  max-width: 1120px;
  margin: 0 auto;
}

.section-title {
  font-size: 2.5rem;
  line-height: 3.25rem;
  font-weight: 700;
  text-align: center;
}

.illus-desktop {
  display: none;
}

/* navbar */
.header {
  padding: 1.25rem 1.25rem 0 1.25rem;
  background-image: url("images/header_illus.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

.navbar {
  height: 48px;
}

.navbar-container {
  display: flex;
  justify-content: end;
}

.mobile-menu {
  padding: 8px;
}

.mobile-menu img {
  height: 24px;
  width: 24px;
}

.navbar-links {
  display: none;
}

.navbar-link-item {
  padding: 10px 12px;
  font-weight: 600;
  font-size: 1rem;
  transition: 0.2s ease;
}

.navbar-link-item:hover {
  transform: scale(1.2);
  cursor: pointer;
  color: var(--highlight-color);
}

/* -- end navbar */

/* Hero section */
.hero-banner {
  text-align: center;
}

.hero-banner-container {
  display: flex;
  flex-direction: column;
}

.hero-banner__title .my-position {
  color: var(--highlight-color);
}

.hero-banner__title .my-name {
  display: block;
  margin: 0;
  padding: 0;
}

.hero-banner__info {
  font-size: 1.25rem;
  line-height: 1.75rem;
}

.socials {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1.25rem;
}

.socials-item {
  height: 1.25rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

.socials-item img {
  width: fit-content;
}

.banner-scroll-btn {
  margin: 80px 0 40px 0;
}

.banner-scroll-btn button {
  width: 40px;
  height: 40px;
  border: 1px solid var(--neutral-color);
  border-radius: 100px;
}

.banner-scroll-btn .banner-scroll-btn button {
  display: flex;
  justify-content: center;
  align-items: center;
}

.banner-scroll-btn button img {
  padding-top: 2px;
}

/* end hero section */

/* work section */
.works-section-title {
  margin-top: 0;
}

.works-section-title::after {
  content: "";
  display: block;
  margin: 24px auto 62px auto;
  height: 4px;
  width: 40px;
  background: var(--highlight-color);
}

.cards-container {
  display: grid;
  gap: 24px;
  grid-template-columns: 1;
}

.work-card {
  display: flex;
  flex-direction: column;
  background: var(--neutral-color);
  border: 1px solid var(--secondary-color-50);
  border-radius: 8px;
  overflow: hidden;
}

.work-card__head {
  height: 200px;
}

.work-card__body {
  color: var(--secondary-color);
  background: #fff;
  border-radius: 8px 8px 0 0;
}

.card-title {
  font-weight: 600;
  font-size: 1.5rem;
  line-height: 2rem;
  text-align: center;
  margin: 1rem;
}

.card-btns {
  display: flex;
  justify-content: space-between;
}

.card-btn {
  font-weight: 600;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: 8px 12px;
  background: var(--secondary-color-50);
  border-radius: 4px;
  display: flex;
  align-items: center;
}

.cta-btn {
  text-align: center;
  cursor: pointer;
  transition: all 0.3s ease-in-out;
}

.cta-btn a,
.form-submit-btn {
  display: inline-block;
  color: #fff;
  font-size: 1rem;
  padding: 12px;
  text-align: center;
  margin: 24px auto;
  border-radius: 4px;
  background: var(--highlight-color);
}

.cta-btn a:hover {
  opacity: 0.8;
  transform: scale(1.025);
  box-shadow: 4px 4px 8px var(--neutral-color);
}

/* end work section */

/* about me section */
.about-me-header {
  position: relative;
}

.about-me-header-container {
  display: flex;
  flex-direction: column;
  padding: 1.25rem;
}

.about-me-sub-title {
  font-size: 1.25rem;
  line-height: 1.75rem;
  font-weight: 400;
  letter-spacing: 0;
  text-align: center;
}

.about-me-cards-container {
  display: flex;
  justify-content: center;
  flex-direction: column;
  gap: 24px;
}

.about-me-card {
  display: flex;
  flex: 1;
  flex-direction: column;
  justify-content: start;
  align-items: center;
  background: var(--secondary-color-50);
  border: 1px solid var(--neutral-color-50);
  border-radius: 8px;
  overflow: hidden;
  padding: 24px;
}

.about-me-card__icon {
  background: #fff;
  margin: 24px 0;
  padding: 18px;
  width: 80px;
  height: 80px;
  border-radius: 200px;
  display: flex;
  justify-content: center;
  align-items: center;
  box-shadow: 0 16px 24px var(--neutral-color);
}

.about-me-card__tech-stack {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  gap: 8px;
}

.about-me-card__tech-stack li {
  color: var(--highlight-color);
  font-weight: 600;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: 12px;
  background: #fff;
  border-radius: 8px;
}

.about-me-header .illus-1 {
  position: absolute;
  top: 0;
  right: 0;
}

.about-me-header .illus-2 {
  position: absolute;
  bottom: 48px;
  left: 0;
}

/* end about section */

/* contact section */
.contact-section {
  position: relative;
}

.contact-section .illus-1 {
  position: absolute;
  bottom: 0;
  right: 0;
}

.contact-section form {
  display: flex;
  gap: 24px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.contact-section form textarea {
  text-align: left;
  height: 114px;
}

.form-submit-btn {
  display: block;
}

.form-submit-btn:hover {
  opacity: 0.8;
  transform: scale(1.025);
  box-shadow: 4px 4px 8px var(--neutral-color);
}

/* end contact section */

/* footer */
footer .email {
  text-align: center;
  font-size: 1.25rem;
  line-height: 2rem;
  margin-top: 0;
}

/* media queries */

@media screen and (min-width: 768px) {
  /* header */
  .navbar {
    margin-bottom: 160px;
  }

  .mobile-menu {
    display: none;
  }

  .navbar-container {
    justify-content: center;
  }

  .navbar-links {
    display: flex;
    gap: 8px;
    justify-content: center;
  }

  /* hero section */
  .hero-banner__title {
    font-size: 3rem;
    font-weight: 800;
    line-height: 3.75rem;
    letter-spacing: 0.37px;
    margin-top: 0;
  }

  .hero-banner__title .my-name {
    display: inline;
  }

  .hero-banner__title .my-position {
    display: block;
  }

  /* work section */
  .cards-container {
    grid-template-columns: repeat(3, 1fr);
  }

  /* about me section */
  .about-me-cards-container {
    flex-direction: row;
  }

  /* contact section */
  .contact-section-wrapper {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
  }

  .contact-section-wrapper form {
    align-items: start;
  }

  .contact-section-title {
    font-size: 30px;
    font-weight: 700;
    line-height: 52px;
    text-align: left;
  }

  .form-submit-btn {
    margin: 0;
  }

  .illus-mobile {
    display: none;
  }

  .illus-desktop {
    z-index: -10;
    position: absolute;
    display: inline-block;
  }

  .illus-desktop.illus-1 {
    width: 120px;
    bottom: 0;
    left: 0;
  }

  .illus-desktop.illus-2 {
    bottom: 40px;
    left: 180px;
  }

  .illus-desktop.illus-3 {
    width: 120px;
    bottom: 0;
    right: 0;
  }

  /* footer section */
  footer {
    margin-top: 12px;
    border-top: 1px solid var(--neutral-color);
  }

  footer .email {
    display: none;
  }
}

